@@ -8,6 +8,7 @@ for execfile in gen-make.py \
                 build/buildcheck.sh \
                 build/PrintPath \
                 ac-helpers/get-neon-ver.sh \
+                ac-helpers/check-diff.sh \
                 ac-helpers/install-sh; do
   chmod +x $execfile
 done
